# time-machine-labs

./: _config.yml  index.md
lab_1/: working-with-git.md
lab_2/: ex1.py  ex2.py  ex3.py  haiku.txt  python-essentials.ipynb
lab_3/: rectangle.py  shape.py  tictactoe.py  time.py
lab_4/firstpp/: pyproject.toml
lab_4/firstpp/firstpp/: main.py
lab_4/firstpp/tests/: test_firstpp.py
