[tool.poetry]
name = "firstpp"
version = "0.1.0"
description = ""
authors = ["alexandraveres7 <alexandraveres7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
isort = "^4.3.21"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
